Ajout de la partie hebergement

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Un super titre !</h1>
     <h2>Soustitres</h2>
+    <p>J'ia changé de branc</p>
     <p>second</p>
     <p>Ceci est un Immense test </p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse quia fugit tenetur corrupti nesciunt a, placeat minus atque nisi soluta porro cum est inventore incidunt dolorum dignissimos in. Nihil temporibus laudantium, nesciunt laborum consequuntur neque. Ad eos, cum veritatis, magnam, cumque dolores iusto odio odit neque officia nostrum sunt! Dolorum ab ipsum cumque libero iste numquam laudantium dolore officiis possimus placeat, fugit optio minima, deleniti veritatis ipsa quasi excepturi odio. Veritatis culpa quae animi, voluptas reiciendis qui odit numquam sapiente, molestiae voluptate aut itaque expedita corporis. Nemo dolor ut magnam a laborum hic, totam saepe impedit odit sit? Fugit voluptate illo quod nulla, id exercitationem dolores officiis earum aspernatur odit molestiae quaerat soluta laboriosam odio beatae optio facilis sequi veniam suscipit sed nostrum, necessitatibus velit qui? Consectetur, praesentium libero non totam laboriosam, explicabo aut error quasi ullam dolore incidunt illum reiciendis tempore? Harum neque aperiam vero totam et? Expedita, vero?</p>
